Fix: Sidebar links unclickable due to z-index

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -255,7 +255,7 @@
   border: 1px solid var(--global-border-color);
   border-radius: $border-radius;
   background: var(--global-bg-color);
-  z-index: -1;
+  z-index: 1;
   box-shadow: 0 0 10px rgba(#000, 0.25);
   cursor: default;
 
@@ -267,6 +267,7 @@
     border: 0;
     background: transparent;
     box-shadow: none;
+    z-index: auto;
   }
 
   &:before {
